<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="home_title">AndroidERestaurant</string>
    <string name="Message_accueil">"Bienvenue chez "</string>
    <string name="btn_Dessert">Dessert</string>
    <string name="btn_Plats">Plats</string>
    <string name="btn_entrees">Entrées</string>
    <string name="text_bienvenue">Bienvenue chez</string>
    <string name="Nom_Restau">Nom restau</string>
    <string name="nom_restau">Sarah</string>
    <string name="Couverts">Couverts</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total">"Total : "</string>
    <string name="btndeco" />

    <string-array name="Entrees">
        <item>Entree 1</item>
        <item>Entree 1</item>
        <item>Entree 1</item>
        <item>Entree 1</item>
        <item>Entree 1</item>
        <item>Entree 1</item>
        <item>Entree 1</item>
    </string-array>

    <string-array name="Plats">
        <item>Plats 1</item>
        <item>Plats 1</item>
        <item>Plats 1</item>
        <item>Plats 1</item>
        <item>Plats 1</item>
        <item>Plats 1</item>
        <item>Plats 1</item>
    </string-array>

    <string-array name="Desserts">
        <item>Desserts 1</item>
        <item>Desserts 1</item>
        <item>Desserts 1</item>
        <item>Desserts 1</item>
        <item>Desserts 1</item>
        <item>Desserts 1</item>
        <item>Desserts 1</item>
    </string-array>
</resources>